gcc/testsuite/algol60.dg/fail/array5.a60
'comment' { dg-do compile } ;
'begin'
 'integer' a;
 'integer' 'array' b[1:a]; 'comment' { dg-error "unknown symbol" } ;
'end';
